target/generated-sources/antlr4/NETParser.java
// Generated from NET.g4 by ANTLR 4.4

	//System.out.println("Grammar started");
	// what ever you will write here will be placed at the top of the generated files like lexer, visitor, parser

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NETParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__27=1, T__26=2, T__25=3, T__24=4, T__23=5, T__22=6, T__21=7, T__20=8, 
		T__19=9, T__18=10, T__17=11, T__16=12, T__15=13, T__14=14, T__13=15, T__12=16, 
		T__11=17, T__10=18, T__9=19, T__8=20, T__7=21, T__6=22, T__5=23, T__4=24, 
		T__3=25, T__2=26, T__1=27, T__0=28, MUL=29, DIV=30, ADD=31, SUB=32, LESS=33, 
		GRT=34, LE=35, GE=36, EE=37, NE=38, IDENTIFIER=39, STRING=40, NUMBER=41, 
		WS=42, NEWLINE=43;
	public static final String[] tokenNames = {
		"<INVALID>", "'potential'", "'decision'", "'label'", "'true'", "'subtype'", 
		"'class'", "';'", "'{'", "'='", "'}'", "'number'", "'position'", "'states'", 
		"'('", "','", "'state_values'", "'false'", "'continuous'", "'discrete'", 
		"'utility'", "'boolean'", "'interval'", "':'", "'|'", "'node'", "'data'", 
		"'instance'", "')'", "'*'", "'/'", "'+'", "'-'", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "IDENTIFIER", "STRING", "NUMBER", "WS", "NEWLINE"
	};
	public static final int
		RULE_prog = 0, RULE_classDefn = 1, RULE_className = 2, RULE_classElement = 3, 
		RULE_domainElement = 4, RULE_classInstance = 5, RULE_instanceName = 6, 
		RULE_instanceAttribute = 7, RULE_bindings = 8, RULE_inputBindings = 9, 
		RULE_inputBinding = 10, RULE_outputBindings = 11, RULE_outputBinding = 12, 
		RULE_actualName = 13, RULE_formalName = 14, RULE_basicNode = 15, RULE_nodeName = 16, 
		RULE_nodeAttribute = 17, RULE_state = 18, RULE_label = 19, RULE_position = 20, 
		RULE_xCoordinate = 21, RULE_yCoordinate = 22, RULE_subtype = 23, RULE_stateValues = 24, 
		RULE_potential = 25, RULE_edgeInformation = 26, RULE_childNodes = 27, 
		RULE_parentNodes = 28, RULE_data = 29, RULE_tuple = 30, RULE_tuple1 = 31, 
		RULE_potentialAttribute = 32, RULE_attribute = 33, RULE_stmt1 = 34, RULE_stmt = 35, 
		RULE_attribName = 36, RULE_attribValue = 37, RULE_formula = 38, RULE_function_call = 39, 
		RULE_parameters = 40, RULE_parameter = 41, RULE_expr = 42, RULE_boolExpr = 43, 
		RULE_sumExpr = 44, RULE_productExpr = 45, RULE_primary = 46, RULE_literal = 47;
	public static final String[] ruleNames = {
		"prog", "classDefn", "className", "classElement", "domainElement", "classInstance", 
		"instanceName", "instanceAttribute", "bindings", "inputBindings", "inputBinding", 
		"outputBindings", "outputBinding", "actualName", "formalName", "basicNode", 
		"nodeName", "nodeAttribute", "state", "label", "position", "xCoordinate", 
		"yCoordinate", "subtype", "stateValues", "potential", "edgeInformation", 
		"childNodes", "parentNodes", "data", "tuple", "tuple1", "potentialAttribute", 
		"attribute", "stmt1", "stmt", "attribName", "attribValue", "formula", 
		"function_call", "parameters", "parameter", "expr", "boolExpr", "sumExpr", 
		"productExpr", "primary", "literal"
	};

	@Override
	public String getGrammarFileName() { return "NET.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		//System.out.println("Grammar started");
		/* what ever you will write here will be placed at the body as a statement/series of statements/method/class
			of the generated files like lexer, parser
		*/
	//	StringBuilder bufferTuple = new StringBuilder();

	public NETParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ClassDefnContext classDefn() {
			return getRuleContext(ClassDefnContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NETVisitor ) return ((NETVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); classDefn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefnContext extends ParserRuleContext {
		public String str;
		public ClassNameContext className;
		public ClassElementContext classElement;
		public ClassElementContext classElement(int i) {
			return getRuleContext(ClassElementContext.class,i);
		}
		public List<ClassElementContext> classElement() {
			return getRuleContexts(ClassElementContext.class);
		}
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public ClassDefnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).enterClassDefn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).exitClassDefn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NETVisitor ) return ((NETVisitor<? extends T>)visitor).visitClassDefn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDefnContext classDefn() throws RecognitionException {
		ClassDefnContext _localctx = new ClassDefnContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDefn);
		StringBuilder bufferClassDefn = new StringBuilder();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(T__22);
			setState(99); ((ClassDefnContext)_localctx).className = className();
			setState(100); match(T__20);
			bufferClassDefn.append("class " + (((ClassDefnContext)_localctx).className!=null?_input.getText(((ClassDefnContext)_localctx).className.start,((ClassDefnContext)_localctx).className.stop):null) + "\n{\n");
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__27) | (1L << T__26) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__3) | (1L << T__1) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(102); ((ClassDefnContext)_localctx).classElement = classElement();
				bufferClassDefn.append(((ClassDefnContext)_localctx).classElement.str + "\n");
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110); match(T__18);
			bufferClassDefn.append("}\n");
			}
			((ClassDefnContext)_localctx).str =  bufferClassDefn.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(NETParser.IDENTIFIER, 0); }
		public ClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_className; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).enterClassName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).exitClassName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NETVisitor ) return ((NETVisitor<? extends T>)visitor).visitClassName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassNameContext className() throws RecognitionException {
		ClassNameContext _localctx = new ClassNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_className);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassElementContext extends ParserRuleContext {
		public String str;
		public DomainElementContext domainElement;
		public AttributeContext attribute;
		public ClassInstanceContext classInstance;
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public DomainElementContext domainElement() {
			return getRuleContext(DomainElementContext.class,0);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public ClassInstanceContext classInstance() {
			return getRuleContext(ClassInstanceContext.class,0);
		}
		public ClassElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).enterClassElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).exitClassElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NETVisitor ) return ((NETVisitor<? extends T>)visitor).visitClassElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassElementContext classElement() throws RecognitionException {
		ClassElementContext _localctx = new ClassElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classElement);
		StringBuilder bufferClassElement = new StringBuilder();
		try {
			int _alt;
			setState(128);
			switch (_input.LA(1)) {
			case T__27:
			case T__26:
			case T__10:
			case T__9:
			case T__8:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(115); ((ClassElementContext)_localctx).domainElement = domainElement();
				bufferClassElement.append(((ClassElementContext)_localctx).domainElement.str + "\n");
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(118); ((ClassElementContext)_localctx).attribute = attribute();
						bufferClassElement.append(((ClassElementContext)_localctx).attribute.str + "\n");
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(123); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(125); ((ClassElementContext)_localctx).classInstance = classInstance();
				bufferClassElement.append(((ClassElementContext)_localctx).classInstance.str + "\n");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			((ClassElementContext)_localctx).str =  bufferClassElement.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainElementContext extends ParserRuleContext {
		public String str;
		public BasicNodeContext basicNode;
		public PotentialContext potential;
		public BasicNodeContext basicNode() {
			return getRuleContext(BasicNodeContext.class,0);
		}
		public PotentialContext potential() {
			return getRuleContext(PotentialContext.class,0);
		}
		public DomainElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domainElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).enterDomainElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).exitDomainElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NETVisitor ) return ((NETVisitor<? extends T>)visitor).visitDomainElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DomainElementContext domainElement() throws RecognitionException {
		DomainElementContext _localctx = new DomainElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_domainElement);
		StringBuilder bufferDomainElement = new StringBuilder();
		try {
			setState(136);
			switch (_input.LA(1)) {
			case T__26:
			case T__10:
			case T__9:
			case T__8:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); ((DomainElementContext)_localctx).basicNode = basicNode();
				bufferDomainElement.append(((DomainElementContext)_localctx).basicNode.str + "\n");
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); ((DomainElementContext)_localctx).potential = potential();
				bufferDomainElement.append(((DomainElementContext)_localctx).potential.str + "\n");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			((DomainElementContext)_localctx).str =  bufferDomainElement.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassInstanceContext extends ParserRuleContext {
		public String str;
		public InstanceNameContext instanceName;
		public ClassNameContext className;
		public BindingsContext bindings;
		public InstanceAttributeContext instanceAttribute;
		public InstanceNameContext instanceName() {
			return getRuleContext(InstanceNameContext.class,0);
		}
		public List<InstanceAttributeContext> instanceAttribute() {
			return getRuleContexts(InstanceAttributeContext.class);
		}
		public InstanceAttributeContext instanceAttribute(int i) {
			return getRuleContext(InstanceAttributeContext.class,i);
		}
		public BindingsContext bindings() {
			return getRuleContext(BindingsContext.class,0);
		}
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public ClassInstanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classInstance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).enterClassInstance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NETListener ) ((NETListener)listener).exitClassInstance(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NETVisitor ) return ((NETVisitor<? extends T>)visitor).visitClassInstance(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassInstanceContext classInstance() throws RecognitionException {
		ClassInstanceContext _localctx = new ClassInstanceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classInstance);
		StringBuilder bufferClassInstance = new StringBuilder();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(T__1);
			setState(139); ((ClassInstanceContext)_localctx).instanceName = instanceName();
			setState(140); match(T__5);
			setState(141); ((ClassInstanceContext)_localctx).className = className();
			setState(142); match(T__14);
			setState(143); ((ClassInstanceContext)_localctx).bindings = bindings();
			setState(144); match(T__0);
			setState(145); match(T__20);
			 bufferClassInstance.append("instance " + (((ClassInstanceContext)_localctx).instanceName!=null?_input.getText(((ClassInstanceContext)_localctx).instanceName.start,((ClassInstanceContext)_localctx).instanceName.stop):null) + " : " + (((ClassInstanceContext)_localctx).className!=null?_input.getText(((ClassInstanceContext)_localctx).className.start,((ClassInstanceContext)_localctx).className.stop):null) + "(" + ((ClassInstanceContext)_localctx).bindings.str + ")\n{\n");
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__25) | (1L << T__16) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(147); ((ClassInstanceContext)_localctx).instanceAttribute = instanceAttribute();
				bufferClassInstance.append(((ClassInstanceContext)_localctx).instanceAttribute.str + "\n");
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155); match(T__18);
			bufferClassInstance.append("}\n");
			}
			((ClassInstanceContext)_localctx).str =  bufferClassInstance.toString();
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(NETParser.IDENTIFIER, 0); }
		public InstanceNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
